--- a/src/Page13.css
+++ b/src/Page13.css
@@ -28,7 +28,7 @@
 }
 .page13-right-section {
   width: 35%;
-  background-color: red;
+  background-color: rgb(54, 58, 95);
 }
 .page13-image-wrapper {
   position: relative;
